--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/Logo.png">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+            <img src="./img/Logo.png" alt="logo booolean">
+            <h1>Toboolist</h1>
+    </header>
+    <!-- Main -->
+    <main>
+        <!-- Buttons -->
+        <div class="container">
+            <button class="btn-blue">Add Task</button>
+            <button class="btn-white">Add Section</button>
+        </div>
+            <!-- New task list -->
+            <div class="list container">
+                <ul>
+                    <li><h2>&blacktriangledown;New Task</h2></li>
+                    <li><span class="check">&check;</span>Quarterly Newsletter<span class="badge-blue badges">Editorial</span></li>
+                </ul>
+                <!-- Today list -->
+                <ul>
+                    <li><h2>&blacktriangledown;Today</h2></li>
+                    <li><span class="check">&check;</span>Recruiting blog post<span class="badge-blue badges">Editorial</span></li>
+                    <li><span class="check">&check;</span>Mobile app launch<span class="badge-purple badges">Q1-goals</span></li>
+                    <li><span class="cross">&cross;</span>Interview John H.<span class="badge-green badges">Recruiting</span></li>
+                    <li><span class="check">&check;</span>Summit update to mobile storefronts<span class="badge-orange badges">Mobile</span></li>
+                </ul>
+                <!-- Upcoming list -->
+                <ul>
+                    <li><h2>&blacktriangledown;Upcoming</h2></li>
+                    <li><span class="cross">&cross;</span>Schedule Meeting with Alex</li>
+                    <li><span class="check">&check;</span>Homepage refresh<span class="badge-pink badges">Website</span></li>
+                    <li><span class="check">&check;</span>Onboard new Sales team members<span class="badge-lime badges">Sales</span></li>
+                    <li><span class="check">&check;</span>Review editorial character<span class="badge-blue badges">Editorial</span></li>
+                </ul>
+            </div>
+    </main>
 </body>
 </html>
